Added 960_grid to index and setup the grid

--- a/index.html
+++ b/index.html
@@ -1,102 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/960.css">
     <title>Document</title>
 </head>
 <body>
-    <a href="#">www.demlink.org</a>
-    <ul>
-        <li><a href="#">support</a></li>
-        <li><a href="#">faqs</a></li>
-        <li><a href="#">sitemap</a></li>
-        <li><a href="#">help</a></li>
-    </ul>
-    <img src="http://www.placehold.it/150x75" alt="">
-    <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="#">about</a></li>
-        <li><a href="#">services</a></li>
-        <li><a href="#">faqs</a></li>
-        <li><a href="#">contacts</a></li>
-    </ul>
-    <div>
-        <img src="http://www.placehold.it/1200x600" alt="">
-        <h1>Think Big</h1>
-        <h5>win the world</h5>
-        <a href="">read more</a>
+<div class="container_12">
+    <div class="grid_6">
+        <a href="#">www.demlink.org</a>
     </div>
-    <div>
-        <div>
-            <h1>smart</h1>
-            <img src="http://www.placehold.it/250x100" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
-            <a href="#">more</a>
-        </div>
-        <div>
-            <h1>strong</h1>
-            <img src="http://www.placehold.it/250x100" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
-            <a href="#">more</a>
-        </div>
-        <div>
-            <h1>stable</h1>
-            <img src="http://www.placehold.it/250x100" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
-            <a href="#">more</a>
-        </div>
+    <div class="grid_6">
+        <ul>
+            <li><a href="#">support</a></li>
+            <li><a href="#">faqs</a></li>
+            <li><a href="#">sitemap</a></li>
+            <li><a href="#">help</a></li>
+        </ul>
     </div>
-    <div>
-        <div>
-            <ul>services
-                <li>
-                    mdrerit sit amet tinunt ac velor
-                </li>
-                <li>
-                    sassisqu dia loreterapibu ac
-                </li>
-                <li>
-                    cuitae ec eget tellus non et lac
-                </li>
-                <li>
-                    felieum iaculas lacinia ectm elemen
-                </li>
-                <li>
-                    quat antpsum dolor tcoecttue
-                </li>
-                <li>
-                    alquam  congue fermentum nisi
-                </li>
-                <li>
-                    mauris accumi diam
-                </li>
-                <li>
-                    sed in lacus ut enim ascing ali
-                </li>
-            </ul>
-            <a href="#">more</a>
-        </div>
-        <div>
-            <ul>opportunites
-                <li><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio nemo, accusamus iure laudantium vitae veritatis, fuga perferendis veniam eos, itaque ducimus sunt dicta aliquid libero tenetur sequi vel culpa! Harum!</p></li>
-                <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda optio deserunt repellendus modi perferendis neque laudantium quo ab consectetur dolore saepe, quas numquam adipisci voluptate aliquam sequi, ut culpa.</p></li>
-            </ul>
-            <a href="#">more</a>
-        </div>
-        <div>
-            <ul>news
-                <li><img src="http://www.placehold.it/50x50" alt=""><h3>scuitae ec eget tellus non</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos! Eos minima dolores voluptatum tempora, tempore maxime quas modi. Ad eos cupiditate mollitia omnis, molestias dolorum recusandae possimus.</p>
-                </li>
-                <li><img src="http://www.placehold.it/50x50" alt=""><h3>mauris accumi diam</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos! Eos minima dolores voluptatum tempora, tempore maxime quas modi. Ad eos cupiditate mollitia omnis, molestias dolorum recusandae possimus.</p>
-                </li>
-                <li><img src="http://www.placehold.it/50x50" alt=""><h3>aliquam dapibus tincetus</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos! Eos minima dolores voluptatum tempora, tempore maxime quas modi. Ad eos cupiditate mollitia omnis, molestias dolorum recusandae possimus.</p>
-                </li>
-            </ul>
-            <a href="#">more</a>
-        </div>
+</div>
+<div class="container_12">
+    <div class="grid_6">
+        <img src="http://www.placehold.it/150x75" alt="grid_6">
     </div>
-
+    <div class="grid_6">
+        <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">services</a></li>
+            <li><a href="#">faqs</a></li>
+            <li><a href="#">contacts</a></li>
+        </ul>
+    </div>
+</div>
+<div class="container_12">
+    <img src="http://www.placehold.it/1200x600" alt="grid_6">
+    <h1>Think Big</h1>
+    <h2>win the world</h2>
+    <a href="#">read more</a>
+</div>
+<div class="container_12">
+    <div class="grid_4">
+        <h2>smart</h2>
+        <img src="http://www.placehold.it/250x100" alt="grid_6">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
+        <a href="#">more</a>\
+    </div>
+    <div class="grid_4">
+        <h2>strong</h2>
+        <img src="http://www.placehold.it/250x100" alt="grid_6">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
+        <a href="#">more</a>
+    </div>
+    <div class="grid_4">
+        <h2>stable</h2>
+        <img src="http://www.placehold.it/250x100" alt="grid_6">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
+        <a href="#">more</a>
+    </div>
+</div>
+<div class="container_12">
+    <div class="grid_4">
+        <h2>services</h2>
+        <ul>
+            <li>
+                mdrerit sit amet tinunt ac velor
+            </li>
+            <li>
+                sassisqu dia loreterapibu ac
+            </li>
+            <li>
+                cuitae ec eget tellus non et lac
+            </li>
+            <li>
+                felieum iaculas lacinia ectm elemen
+            </li>
+            <li>
+                quat antpsum dolor tcoecttue
+            </li>
+            <li>
+                alquam  congue fermentum nisi
+            </li>
+            <li>
+                mauris accumi diam
+            </li>
+            <li>
+                sed in lacus ut enim ascing ali
+            </li>
+        </ul>
+        <a href="#">more</a>
+    </div>
+    <div class="grid_4">
+        <h2>opportunites</h2>
+        <ul>
+            <li><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio nemo, accusamus iure laudantium vitae veritatis, fuga perferendis veniam eos, itaque ducimus sunt dicta aliquid libero tenetur sequi vel culpa! Harum!</p></li>
+            <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda optio deserunt repellendus modi perferendis neque laudantium quo ab consectetur dolore saepe, quas numquam adipisci voluptate aliquam sequi, ut culpa.</p></li>
+        </ul>
+        <a href="#">more</a>
+    </div>
+    <div class="grid_4">
+        <h2>news</h2>
+        <ul>
+            <li><img src="http://www.placehold.it/50x50" alt="grid_6"><h3>scuitae ec eget tellus non</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos! Eos minima dolores voluptatum tempora, tempore maxime quas modi. Ad eos cupiditate mollitia omnis, molestias dolorum recusandae possimus.</p>
+            </li>
+            <li><img src="http://www.placehold.it/50x50" alt="grid_6"><h3>mauris accumi diam</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos! Eos minima dolores voluptatum tempora, tempore maxime quas modi. Ad eos cupiditate mollitia omnis, molestias dolorum recusandae possimus.</p>
+            </li>
+            <li><img src="http://www.placehold.it/50x50" alt="grid_6"><h3>aliquam dapibus tincetus</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos! Eos minima dolores voluptatum tempora, tempore maxime quas modi. Ad eos cupiditate mollitia omnis, molestias dolorum recusandae possimus.</p>
+            </li>
+        </ul>
+        <a href="#">more</a>
+    </div>
+</div>
 </body>
 </html>
