added styling to index.html

--- a/index.html
+++ b/index.html
@@ -1,59 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/960.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-<div class="container_12">
+<div class="top-bar container_12">
     <div class="grid_6">
-        <a href="#">www.demlink.org</a>
+        <a href="#">WWW.DEMLINK.ORG</a>
     </div>
     <div class="grid_6">
         <ul>
-            <li><a href="#">support</a></li>
-            <li><a href="#">faqs</a></li>
-            <li><a href="#">sitemap</a></li>
-            <li><a href="#">help</a></li>
+            <li><a href="#">SUPPORT</a></li>
+            <li><a href="#">FAQS</a></li>
+            <li><a href="#">SITEMAP</a></li>
+            <li class="help"><a href="#">HELP</a></li>
+        </ul>
+    </div>
+</div>
+<div class="navigation-bar container_12">
+    <div class="grid_6">
+        <img src="http://www.placehold.it/200x75" alt="grid_6">
+    </div>
+    <div class="grid_6">
+        <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">SERVICES</a></li>
+            <li><a href="#">FAQS</a></li>
+            <li><a href="#">CONTACTS</a></li>
         </ul>
     </div>
 </div>
 <div class="container_12">
-    <div class="grid_6">
-        <img src="http://www.placehold.it/150x75" alt="grid_6">
+    <div class="hero">
+        <img src="http://www.placehold.it/960x600" alt="grid_6">
     </div>
-    <div class="grid_6">
-        <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">services</a></li>
-            <li><a href="#">faqs</a></li>
-            <li><a href="#">contacts</a></li>
-        </ul>
+    <div class="hero-child">
+        <h1>THINKING BIG</h1>
+        <h2>WIN THE WORLD</h2>
+        <a href="#">READ MORE</a>
     </div>
 </div>
-<div class="container_12">
-    <img src="http://www.placehold.it/1200x600" alt="grid_6">
-    <h1>Think Big</h1>
-    <h2>win the world</h2>
-    <a href="#">read more</a>
-</div>
-<div class="container_12">
-    <div class="grid_4">
-        <h2>smart</h2>
-        <img src="http://www.placehold.it/250x100" alt="grid_6">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
-        <a href="#">more</a>\
-    </div>
-    <div class="grid_4">
-        <h2>strong</h2>
+<div class="directives container_12">
+    <div class="smart grid_4">
+        <h2>SMART</h2>
         <img src="http://www.placehold.it/250x100" alt="grid_6">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
         <a href="#">more</a>
     </div>
-    <div class="grid_4">
-        <h2>stable</h2>
+    <div class="strong grid_4">
+        <h2>STRONG</h2>
+        <img src="http://www.placehold.it/250x100" alt="grid_6">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
+        <a href="#">more</a>
+    </div>
+    <div class="stable grid_4">
+        <h2>STABLE</h2>
         <img src="http://www.placehold.it/250x100" alt="grid_6">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
         <a href="#">more</a>
