made working hero buttons and fixed styling errors

--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/960.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src='https://code.jquery.com/jquery-git.min.js'></script>
     <title>Document</title>
 </head>
 <body>
-<div class="top-bar container_12">
-    <div class="grid_6">
-        <a href="#">WWW.DEMLINK.ORG</a>
-    </div>
-    <div class="grid_6">
-        <ul>
-            <li><a href="#">SUPPORT</a></li>
-            <li><a href="#">FAQS</a></li>
-            <li><a href="#">SITEMAP</a></li>
-            <li class="help"><a href="#">HELP</a></li>
-        </ul>
+<div class="top-bar">
+    <div class="top-size container_12">
+        <div class="grid_6">
+            <a href="#">WWW.DEMOLINK.ORG</a>
+        </div>
+        <div class="grid_6">
+            <ul>
+                <li><a href="#">SUPPORT</a></li>
+                <li><a href="#">FAQS</a></li>
+                <li><a href="#">SITEMAP</a></li>
+                <li class="help"><a href="#">HELP</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 <div class="navigation-bar container_12">
-    <div class="grid_6">
-        <img src="http://www.placehold.it/200x75" alt="grid_6">
+    <div class="grid_4">
+        <img src="images/logo.png" alt="grid_4">
     </div>
-    <div class="grid_6">
+    <div class="navigation-bar-inner grid_8 ">
         <ul>
             <li><a href="#">HOME</a></li>
             <li><a href="#">ABOUT</a></li>
@@ -35,90 +38,144 @@
         </ul>
     </div>
 </div>
-<div class="container_12">
-    <div class="hero">
-        <img src="http://www.placehold.it/960x600" alt="grid_6">
+<div class="hero-wrapper container_12">
+    <div class="hero hero-1 grid_12">
+
     </div>
-    <div class="hero-child">
-        <h1>THINKING BIG</h1>
-        <h2>WIN THE WORLD</h2>
-        <a href="#">READ MORE</a>
+    <div class="hero hero-2 grid_12">
+
+    </div>
+    <div class="hero hero-3 grid_12">
+
+    </div>
+</div>
+<div class="dots container_12">
+    <div class="dots-child grid_12">
+        <ul>
+            <li>
+                <a href="#" class="image-button1"></a>
+            </li>
+            <li>
+                <a href="#" class="image-button2"></a>
+            </li>
+            <li>
+                <a href="#" class="image-button3"></a>
+            </li>
+        </ul>
     </div>
 </div>
 <div class="directives container_12">
     <div class="smart grid_4">
         <h2>SMART</h2>
-        <img src="http://www.placehold.it/250x100" alt="grid_6">
+        <img src="images/smart.jpg" alt="grid_6">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
-        <a href="#">more</a>
+        <a href="#" class="more">MORE</a>
     </div>
     <div class="strong grid_4">
         <h2>STRONG</h2>
-        <img src="http://www.placehold.it/250x100" alt="grid_6">
+        <img src="images/strong.jpg" alt="grid_6">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
-        <a href="#">more</a>
+        <a href="#" class="more">MORE</a>
     </div>
     <div class="stable grid_4">
         <h2>STABLE</h2>
-        <img src="http://www.placehold.it/250x100" alt="grid_6">
+        <img src="images/stable.jpg" alt="grid_6">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione maiores, vitae laboriosam inventore quia veritatis iste illo. Eaque quasi quaerat sapiente repellendus dolores nesciunt ut eius sunt dicta delectus.</p>
-        <a href="#">more</a>
+        <a href="#" class="more">MORE</a>
     </div>
 </div>
-<div class="container_12">
-    <div class="grid_4">
-        <h2>services</h2>
-        <ul>
-            <li>
-                mdrerit sit amet tinunt ac velor
-            </li>
-            <li>
-                sassisqu dia loreterapibu ac
-            </li>
-            <li>
-                cuitae ec eget tellus non et lac
-            </li>
-            <li>
-                felieum iaculas lacinia ectm elemen
-            </li>
-            <li>
-                quat antpsum dolor tcoecttue
-            </li>
-            <li>
-                alquam  congue fermentum nisi
-            </li>
-            <li>
-                mauris accumi diam
-            </li>
-            <li>
-                sed in lacus ut enim ascing ali
-            </li>
-        </ul>
-        <a href="#">more</a>
-    </div>
-    <div class="grid_4">
-        <h2>opportunites</h2>
-        <ul>
-            <li><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio nemo, accusamus iure laudantium vitae veritatis, fuga perferendis veniam eos, itaque ducimus sunt dicta aliquid libero tenetur sequi vel culpa! Harum!</p></li>
-            <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda optio deserunt repellendus modi perferendis neque laudantium quo ab consectetur dolore saepe, quas numquam adipisci voluptate aliquam sequi, ut culpa.</p></li>
-        </ul>
-        <a href="#">more</a>
-    </div>
-    <div class="grid_4">
-        <h2>news</h2>
-        <ul>
-            <li><img src="http://www.placehold.it/50x50" alt="grid_6"><h3>scuitae ec eget tellus non</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos! Eos minima dolores voluptatum tempora, tempore maxime quas modi. Ad eos cupiditate mollitia omnis, molestias dolorum recusandae possimus.</p>
-            </li>
-            <li><img src="http://www.placehold.it/50x50" alt="grid_6"><h3>mauris accumi diam</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos! Eos minima dolores voluptatum tempora, tempore maxime quas modi. Ad eos cupiditate mollitia omnis, molestias dolorum recusandae possimus.</p>
-            </li>
-            <li><img src="http://www.placehold.it/50x50" alt="grid_6"><h3>aliquam dapibus tincetus</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos! Eos minima dolores voluptatum tempora, tempore maxime quas modi. Ad eos cupiditate mollitia omnis, molestias dolorum recusandae possimus.</p>
-            </li>
-        </ul>
-        <a href="#">more</a>
+<div class="footer">
+    <div class=" container_12">
+        <div class="bullets grid_4">
+            <h2>SERVICES</h2>
+            <ul>
+                <li>
+                    mdrerit sit amet tinunt ac velor
+                </li>
+                <li>
+                    sassisqu dia loreterapibu ac
+                </li>
+                <li>
+                    cuitae ec eget tellus non et lac
+                </li>
+                <li>
+                    felieum iaculas lacinia ectm elemen
+                </li>
+                <li>
+                    quat antpsum dolor tcoecttue
+                </li>
+                <li>
+                    alquam  congue fermentum nisi
+                </li>
+                <li>
+                    mauris accumi diam
+                </li>
+                <li>
+                    sed in lacus ut enim ascing ali
+                </li>
+            </ul>
+            <a href="#" class="more">MORE</a>
+        </div>
+        <div class="opportunities grid_4">
+            <h2>OPPORTUNITIES</h2>
+            <ul>
+                <li><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio nemo, accusamus iure laudantium vitae veritatis, fuga perferendis veniam</p></li>
+                <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores assumenda optio deserunt repellendus modi perferendis neque</p></li>
+            </ul>
+            <a href="#" class="more">MORE</a>
+        </div>
+        <div class="dates grid_4">
+            <h2>NEWS</h2>
+            <ul>
+                <li class="nov-21">
+                    <h2>21</h2>
+                    <h3>NOV</h3>
+                </li>
+                <li><h3>Scuitae ec eget tellus non</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos!</p>
+                </li>
+                <li class="nov-09">
+                    <h2>09</h2>
+                    <h3>NOV</h3>
+                </li>
+                <li><h3>Mauris accumi diam</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos!</p>
+                </li>
+                <li class="nov-17">
+                    <h2>17</h2>
+                    <h3>NOV</h3>
+                </li>
+                <li><h3>Aliquam dapibus tincetus</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo enim rerum eos!</p>
+                </li>
+            </ul>
+            <div class="clearfix"></div>
+            <a href="#" class="more">MORE</a>
+        </div>
     </div>
 </div>
 </body>
+<script>
+    $(document).ready(function () {
+        console.log('here');
+        
+        $( '.image-button1' ).click(function () {
+            console.log('hello1');
+            $( '.hero-1' ).css( 'z-index', '2' );
+            $( '.hero-2' ).css( 'z-index', '1' );
+            $( '.hero-3' ).css( 'z-index', '1' );
+        })
+        $( '.image-button2' ).click(function () {
+            console.log('hello2');
+            $( '.hero-1' ).css( 'z-index', '1' );
+            $( '.hero-2' ).css( 'z-index', '2' );
+            $( '.hero-3' ).css( 'z-index', '1' );
+        })
+        $( '.image-button3' ).click(function () {
+            $( '.hero-1'  ).css( 'z-index', '1' );
+            $( '.hero-2'  ).css( 'z-index', '1' );
+            $( '.hero-3' ).css( 'z-index', '2' );
+        })
+    })
+</script>
 </html>
